styles.css
body {
  background-color: #191765;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  background-image: url(./images/Top-circles.png);
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: top;
}

header {
  display: flex;
  width: 100%;
}

nav {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  height: 50px;
}

#logo-div {
  padding-left: 10%;
}

#menu-div {
  display: flex;
  width: fit-content;
}

#linkholder {
  display: flex;
  justify-content: space-between;
  width: 200px;
  position: relative;
  left: 100px;
}

.navlink {
  display: none;
  background: none;
  border: none;
  color: #fff;
  font-size: 15px;
  line-height: 20px;
  font-family: 'Roboto', sans-serif;
  text-decoration: none;
  padding: 5px;
  font-weight: 500;
  transition: all 0.5s ease-in;
}

.navlink:hover,
.navlink:focus {
  background-color: #fff;
  border-radius: 5px;
  color: #191765;
}

.placeholder {
  display: flex;
  font-family: 'Roboto', sans-serif;
  color: white;
  font-weight: 500;
  font-size: 18px;
  line-height: 16px;
  margin: 0;
}

#menu {
  background-color: transparent;
  display: flex;
  flex-direction: column;
  height: 100%;
  border: none;
}

span.line {
  background-color: white;
  height: 1px;
  width: 25px;
  margin: 5px;
}

.headline {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title {
  font-family: 'Roboto', sans-serif;
  color: #7d73fc;
  font-size: 48px;
  margin-bottom: 12px;
}

h2 {
  font-family: 'Roboto', sans-serif;
  color: white;
  font-size: 30px;
  margin-top: 12px;
}

#support {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#list-and-span {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 600px;
}

.blurb {
  text-align: center;
  color: #c8c8d4;
  font-size: 20px;
  font-weight: lighter;
  max-width: 300px;
  padding-bottom: 20px;
}

.divide {
  border: 1px solid #646369;
  width: 100%;
  align-self: center;
}

#list-container {
  display: flex;
  flex-wrap: wrap;
  width: 80%;
  justify-content: space-between;
  margin-left: 30px;
}

.blue-list {
  color: #9490ff;
  font-size: 18px;
  margin-bottom: 10px;
  padding: 0;
}

#skills-list {
  padding-bottom: 20px;
}

ul {
  list-style-type: none;
  padding-left: 0;
}

li {
  color: #f5f5ff;
  padding-top: 15px;
}

.subsection {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 130px;
}

#links {
  padding-top: 60px;
  display: flex;
  flex-direction: column;
  align-self: center;
  justify-content: center;
  align-items: center;
}

#internal {
  padding-top: 40px;
}

.work-link.browser {
  display: none;
}

.work-link {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  width: 75px;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 32px;
  text-align: center;
  color: #a2a3ae;
  text-decoration: none;
}

#works {
  display: grid;
  gap: 20px;
  grid-template: 0.25fr 1px 7fr 7fr 7fr 7fr 1px / 100%;
  padding: 20px;
  margin-top: 85px;
  align-items: center;
  background-image: url(./images/portfolio-background-shapes-mobile@2x.png);
  background-position: center;
  background-size: 100%;
  background-repeat: no-repeat;
}

h4 {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 40px;
  line-height: 52px;
  color: #9490ff;
  margin: 0;
  text-transform: uppercase;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.placeholder-image {
  width: 100%;
}

.card-title {
  font-family: 'Roboto', sans-serif;
  color: white;
  font-size: 30px;
  font-weight: 400;
}

.card-text {
  align-self: center;
}

.blurb2 {
  font-family: 'Inter', sans-serif;
  color: #c8c8d4;
  font-size: 20px;
  font-weight: lighter;
  font-weight: 300;
  width: 327px;
}

.card-list {
  display: flex;
  width: 300px;
  height: 5px;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 20px;
  align-self: center;
}

.card-list > li {
  font-family: 'Inter', sans-serif;
  font-size: 15px;
  padding: 10px;
}

.card-list > li:not(:last-child) {
  border-right: 1px solid hsl(0, 0%, 33%);
}

.project-button {
  width: 89px;
  height: 49px;
  background: #7d73fc;
  border: none;
  font-family: 'Roboto', sans-serif;
  color: #edecff;
  font-size: 12px;
}

.project-button:hover {
  background: #7d73fc;
  box-shadow: 1px 8px 16px rgba(125, 115, 252, 0.48);
}

.project-button:active {
  background: #5e42d7;
}

.project-button:disabled {
  background: #2a2b33;
}

#about {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: fit-content;
  justify-content: center;
  margin-bottom: 60px;
}

#about-title {
  margin: 30px;
}

#resume {
  width: 150px;
  font-size: 15px;
}

#form-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

form {
  display: flex;
  flex-direction: column;
  width: calc(100% - 24px);
}

.input-field {
  width: 100%;
  align-self: center;
  height: 48px;
  margin: 12px;
  box-sizing: border-box;
  padding: 12px;
  font-family: 'Inter', sans-serif;
}

.input-field:valid {
  border: 1.5px solid #9490ff;
  color: #191765;
}

.input-field.message {
  height: 148px;
  padding: 12px;
}

#contact-title {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  display: flex;
  justify-content: center;
  color: #9490ff;
  align-self: center;
  margin: 0;
  margin-top: 70px;
}

#form-blurb {
  color: #f5f5ff;
  font-family: 'Inter', sans-serif;
}

footer {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.links-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#footer-span {
  border-top: 1px solid #646369;
  width: 100%;
  margin-top: 71px;
  align-self: center;
}

.footer-list {
  display: flex;
  justify-content: space-between;
  width: 200px;
  margin-bottom: 0;
}

#footer-email {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #ebefff;
  margin-top: 0;
  padding-bottom: 40px;
}

@media (min-width: 768px) {
  #main-title {
    animation-duration: 2s;
    animation-name: change;
  }

  @keyframes change {
    from {
      font-size: 40px;
    }

    75% {
      font-size: 120px;
    }

    to {
      font-size: 90px;
    }
  }

  nav {
    width: 90%;
  }

  #menu-div {
    padding-right: 10%;
  }

  #menu {
    display: none;
  }

  .navlink {
    display: flex;
  }

  body {
    background-image: url(./images/two\ circles\ header.svg);
    background-repeat: no-repeat;
    background-position: top 180px center;
  }

  .title {
    font-family: 'Roboto', sans-serif;
    color: #7d73fc;
    font-size: 90px;
    font-weight: 700;
    line-height: 105px;
  }

  h2 {
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 40px;
    line-height: 47px;
    text-align: center;
  }

  .blurb {
    max-width: 450px;
    font-size: 20px;
    line-height: 32px;
  }

  h4 {
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 64px;
    line-height: 114px;
    color: #9490ff;
    margin: 0;
    text-transform: initial;
    margin-bottom: -70px;
    margin-left: 100px;
  }

  .bigspan {
    width: 1200px;
    margin-left: 70px;
  }

  #flexspan {
    margin-left: 0;
    align-self: center;
  }

  #list-container {
    width: 100%;
  }

  .card {
    display: flex;
    flex-direction: row;
    width: 1100px;
    height: 450px;
    align-self: center;
    padding-left: 100px;
  }

  .card-text {
    align-self: flex-end;
    padding-left: 24px;
    margin-right: 24px;
  }

  .blurb2 {
    font-family: 'Roboto', sans-serif;
    width: 440px;
    line-height: 28px;
  }

  .project-button {
    font-size: 15px;
    width: 106px;
    font-weight: 700;
  }

  .card-list {
    width: fit-content;
    padding-left: 0;
  }

  .card-title {
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
  }

  .placeholder-image {
    width: 684px;
    height: 448px;
  }

  .placeholder-image.even {
    order: 1;
  }

  #works {
    grid-template-rows: 1fr 1px 4fr 4fr 4fr 4fr 1px;
    gap: 90px;
    background-image: url(./images/Group\ 65.svg);
    background-repeat: no-repeat;
    background-position: top 220px center;
    background-size: initial;
    align-self: center;
    width: 100%;
  }

  #about-blurb {
    max-width: 600px;
  }

  #form-container {
    align-self: center;
    width: 50%;
  }

  #contact-title {
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 24px;
  }

  #form-blurb {
    max-width: 800px;
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
  }

  #form-button {
    align-self: center;
    width: 160px;
    margin-top: 90px;
  }

  .links-footer {
    flex-direction: row;
    width: 100%;
    justify-content: center;
    align-self: center;
    align-content: center;
  }

  .footer-list {
    width: 200px;
    margin: 0;
    align-self: center;
    justify-content: center;
  }

  .footer-list > li {
    padding: 10px;
    padding-bottom: 0;
    align-self: center;
  }

  #footer-email {
    width: 200px;
    padding: 0;
    padding-top: 5px;
    margin: 0;
    align-self: center;
  }

  #links {
    width: 90%;
  }

  #internal {
    display: none;
  }

  #internal-external {
    display: flex;
    justify-content: space-between;
    width: 80%;
    align-items: center;
    height: 40px;
  }

  #middlelist > li {
    padding-top: 0;
  }

  .work-link.browser {
    display: flex;
  }
}

